add:后台管理部分功能

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Trash-manage-web</title>
+    <title>垃圾回收站</title>
   </head>
   <body>
     <div id="app"></div>
